Fixed problems with names that were too long

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -135,13 +135,6 @@
       text-decoration: none;
     }
   }
-
-  @media all and (min-device-width: $mobile-width) {
-    /* Ensures that the horizontal padding of the last item isn't used, as the padding is only meant for spacing between header items. */
-    &:last-of-type {
-      padding-right: 0;
-    }
-  }
   
   @media all and (max-device-width: $mobile-width) {
     padding: 15px 15px;
